# Capstone

./: .dockerignore  .gitattributes  .gitignore  AEGIS_TECHNICAL_PLAN.md  CLAUDE.md  Dockerfile  PRD.md  README.md  architecture.md  env.example  policy.yaml  pyproject.toml  render.yaml
docs/: model-training-flow.md
docs/brainstorms/: 2026-06-25-aegis-production-platform-vnext-requirements.md
docs/designs/: aegis-production-platform-vnext.md
docs/plans/: 2026-06-25-001-feat-aegis-production-platform-vnext-plan.md
docs/residual-review-findings/: dd2742f.md
evals/cases/: benign.yaml  encoded_and_drip.yaml  tool_and_canary.yaml
examples/: _scenario.py  demo_agent.py  vulnerable_baseline.py
slides/: aegis-demo.md
src/aegis/: __init__.py  client.py  config.py  contracts.py  tracing.py  verify.py
src/aegis/cift/: __init__.py  calibration.py  cli.py  contracts.py  store.py
src/aegis/dashboard/: __init__.py  cli.py  render.py
src/aegis/detectors/: __init__.py  _credutil.py  base.py  encodings.py  honeytokens.py  nimbus.py  partial.py  patterns.py  tool_args.py
src/aegis/detectors/ml/: __init__.py  _model.py  features.py  online.py  probe.py  train.py
src/aegis/evals/: __init__.py  cases.py  cli.py  report.py  runner.py  scorers.py
src/aegis/gateway/: __init__.py  app.py  auth.py  cli.py  models.py  playground.py
src/aegis/llm_training/: __init__.py  dataset.py  train.py
src/aegis/platform/: __init__.py  canaries.py  evidence.py  exports.py  importers.py  snapshots.py  sqlite_store.py  store.py  walkthrough_runs.py
src/aegis/policy/: __init__.py  engine.py
src/aegis/providers/: __init__.py  base.py  mock.py  openai_adapter.py
src/aegis/secrets/: __init__.py  broker.py  fake_store.py  honeytoken_generator.py
tests/: conftest.py  test_broker.py  test_canary_persistence.py  test_cift.py  test_dashboard.py  test_dashboard_visual.py  test_encodings.py  test_evals.py  test_gateway.py  test_guards.py  test_honeytoken_generator.py  test_honeytokens.py  test_llm_training.py  test_ml_features.py  test_ml_probe.py  test_ml_train.py  test_nimbus.py  test_packaging.py  test_partial.py  test_patterns.py  test_platform.py  test_platform_api.py  test_platform_contracts.py  test_platform_store.py  test_policy.py  test_snapshots.py  test_tool_args.py
